--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="./styles/styles.css">
+        <link rel="icon" type="image/png" href="./images/favicon.png" sizes="32x32">
         <title>HTML Academy: Глейси</title>
     </head>
 
@@ -419,7 +420,7 @@
                                     class="visually-hidden">Назад</span></button>
                         </li>
                         <li class="pagination-item">
-                            <a class="pagination-link pagination-link-current" href="#">1</a>
+                            <a class="pagination-link pagination-link-current">1</a>
                         </li>
                         <li class="pagination-item">
                             <a class="pagination-link" href="#">2</a>
