--- a/catalog.html
+++ b/catalog.html
@@ -441,7 +441,7 @@
                     </ul>
                 </section>
             </main>
-            <footer class="main-footer">
+            <footer class="main-footer catalog-footer">
                 <section class="footer-social">
                     <h2 class="visually-hidden">Соцсети</h2>
                     <ul class="footer-social-list">
