--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>HTML Academy: Глейси</title>
   </head>
 
-  <body>
+  <body class="body-slide-2">
     <div class="page-container">
       <header class="main-header">
         <nav class="header-navigation">
@@ -20,6 +20,7 @@
               </a>
             </li>
             <li class="header-navigation-item header-navigation-item-catalog">
+              <!-- в открытом состоянии к ссылке добавить класс header-navigation-link-active -->
               <a class="header-navigation-link header-navigation-catalog-link" href="">
                 Каталог
                 <svg class="header-navigation-icon" width="16" height="16" viewBox="0 0 16 16" fill="none"
@@ -28,7 +29,7 @@
                     d="M3.80799 6.19526C3.54764 5.93491 3.12553 5.93491 2.86518 6.19526C2.60483 6.45561 2.60483 6.87772 2.86518 7.13807L7.52553 11.7984C7.52759 11.8005 7.52967 11.8026 7.53177 11.8047C7.66246 11.9354 7.83392 12.0005 8.00521 12C8.17518 11.9995 8.34498 11.9344 8.47466 11.8047C8.47675 11.8027 8.47881 11.8006 8.48087 11.7985L13.1412 7.13807C13.4016 6.87772 13.4016 6.45561 13.1412 6.19526C12.8809 5.93491 12.4588 5.93491 12.1984 6.19526L8.00321 10.3905L3.80799 6.19526Z" />
                 </svg>
               </a>
-              <section class="popover-catalog">
+              <section class="popover-catalog popover-hidden">
                 <ul class="popover-catalog-list">
                   <li class="popover-catalog-item popover-catalog-item-new">
                     <a class="popover-catalog-link" href="#">Новинки</a>
@@ -66,28 +67,41 @@
             <p class="user-menu-phone" href="#">+7 800 555-86-28</p>
           </li>
           <li class="user-menu-item user-menu-search-item">
+            <!-- в открытом состоянии к ссылке добавить класс user-menu-link-active -->
             <a class="user-menu-link user-menu-search-link" href="#">
               <span class="visually-hidden">Поиск</span>
+              <svg class="user-menu-search-icon" width="16" height="16" viewBox="0 0 16 16" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M2.66341 7.33008C2.66341 4.75275 4.75275 2.66341 7.33008 2.66341C9.90741 2.66341 11.9967 4.75275 11.9967 7.33008C11.9967 8.58735 11.4995 9.7285 10.691 10.5676C10.6682 10.5852 10.6462 10.6044 10.6253 10.6253C10.6044 10.6463 10.5852 10.6682 10.5676 10.6911C9.72847 11.4996 8.58734 11.9967 7.33008 11.9967C4.75275 11.9967 2.66341 9.90741 2.66341 7.33008ZM11.0752 12.018C10.0487 12.8391 8.74675 13.3301 7.33008 13.3301C4.01637 13.3301 1.33008 10.6438 1.33008 7.33008C1.33008 4.01637 4.01637 1.33008 7.33008 1.33008C10.6438 1.33008 13.3301 4.01637 13.3301 7.33008C13.3301 8.74676 12.8391 10.0488 12.018 11.0752L14.4681 13.5253C14.7285 13.7857 14.7285 14.2078 14.4681 14.4682C14.2078 14.7285 13.7857 14.7285 13.5253 14.4682L11.0752 12.018Z" />
+              </svg>
+
             </a>
-            <section class="popover-search">
+            <section class="popover-search popover-hidden">
               <h2 class="visually-hidden">Поиск</h2>
               <label class="visually-hidden" for="search">Поиск по сайту</label>
-              <input class="search-input" name="search" id="search" type="text" placeholder="Поиск по сайту">
+              <input class="input-basic search-input" name="search" id="search" type="text"
+                placeholder="Поиск по сайту">
             </section>
           </li>
           <li class="user-menu-item user-menu-login-item">
-            <a class="user-menu-link user-menu-link-login" href="#">
+            <a class="user-menu-link" href="#">
+              <svg class="user-menu-login-icon" width="16" height="16" viewBox="0 0 16 16" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M9 1.66667C9 1.29848 9.29848 1 9.66667 1H12.3333C12.8638 1 13.3725 1.21071 13.7475 1.58579C14.1226 1.96086 14.3333 2.46957 14.3333 3V12.3333C14.3333 12.8638 14.1226 13.3725 13.7475 13.7475C13.3725 14.1226 12.8638 14.3333 12.3333 14.3333H9.66667C9.29848 14.3333 9 14.0349 9 13.6667C9 13.2985 9.29848 13 9.66667 13H12.3333C12.5101 13 12.6797 12.9298 12.8047 12.8047C12.9298 12.6797 13 12.5101 13 12.3333V3C13 2.82319 12.9298 2.65362 12.8047 2.5286C12.6797 2.40357 12.5101 2.33333 12.3333 2.33333H9.66667C9.29848 2.33333 9 2.03486 9 1.66667ZM5.86189 3.86193C6.12224 3.60158 6.54435 3.60158 6.8047 3.86193L10.1338 7.19103C10.1509 7.20785 10.1671 7.22559 10.1824 7.24416C10.2142 7.28296 10.2411 7.32451 10.2628 7.36795C10.3079 7.45781 10.3333 7.55927 10.3333 7.66667C10.3333 7.77529 10.3074 7.87785 10.2613 7.96846C10.241 8.00841 10.2164 8.04675 10.1876 8.08278C10.1708 8.10378 10.1527 8.12375 10.1335 8.14256L6.8047 11.4714C6.54435 11.7318 6.12224 11.7318 5.86189 11.4714C5.60154 11.2111 5.60154 10.7889 5.86189 10.5286L8.05715 8.33333H1.66667C1.29848 8.33333 1 8.03486 1 7.66667C1 7.29848 1.29848 7 1.66667 7H8.05715L5.86189 4.80474C5.60154 4.54439 5.60154 4.12228 5.86189 3.86193Z" />
+              </svg>
               Вход
             </a>
             <section class="popover-login">
               <h2 class="popover-login-title">Личный кабинет</h2>
               <form class="login-form" method="post" action="https://echo.htmlacademy.ru/">
                 <label class="visually-hidden" for="login-email">Электронная почта</label>
-                <input class="login-input login-email-input" name="login-data" id="login-email" type="email"
+                <input class="input-basic login-input login-email-input" name="login-data" id="login-email" type="email"
                   placeholder="example@test.ru">
                 <label class="visually-hidden" for="login-password">Пароль</label>
-                <input class="login-input login-password-input" name="login-data" id="login-password" type="email"
-                  placeholder="12345678">
+                <input class="input-basic login-input login-password-input" name="login-data" id="login-password"
+                  type="email" placeholder="12345678">
                 <button class="btn btn-secondary login-btn" type="submit">Войти</button>
                 <div class="login-form-links-list">
                   <a class="login-form-link" href="#">Забыли пароль?</a>
@@ -97,7 +111,12 @@
             </section>
           </li>
           <li class="user-menu-item user-menu-cart-item">
-            <a class="user-menu-link user-menu-link-cart" href="#">
+            <a class="user-menu-link" href="#">
+              <svg class="user-menu-cart-icon" width="16" height="16" viewBox="0 0 16 16" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M1.16667 1.25C0.798477 1.25 0.5 1.54848 0.5 1.91667C0.5 2.28486 0.798477 2.58333 1.16667 2.58333H2.93794L3.40537 4.91872C3.40821 4.93667 3.41176 4.95438 3.416 4.97182L4.38338 9.80515L4.3835 9.80571C4.46706 10.2257 4.69562 10.603 5.02921 10.8715C5.36111 11.1387 5.77595 11.2813 6.20183 11.2748H11.8225C12.2484 11.2813 12.6633 11.1387 12.9952 10.8715C13.3289 10.6029 13.5575 10.2254 13.641 9.80515L13.641 9.80515L13.642 9.80016L14.5691 4.93872C14.6063 4.74355 14.5545 4.54195 14.4279 4.38887C14.3012 4.23578 14.1129 4.14716 13.9142 4.14716H4.61072L4.1381 1.78583C4.07574 1.47426 3.80215 1.25 3.4844 1.25H1.16667ZM5.69098 9.54444L4.87759 5.4805H13.1084L12.3328 9.54736C12.31 9.65988 12.2485 9.7609 12.1591 9.83291C12.0691 9.90535 11.9565 9.94383 11.841 9.94162L11.841 9.94149H11.8282H6.19614V9.94137L6.18337 9.94162C6.06787 9.94383 5.95528 9.90535 5.8653 9.83291C5.77531 9.76048 5.71368 9.6587 5.69117 9.5454L5.69098 9.54444ZM4.55739 13.5054C4.55739 12.8175 5.1151 12.2597 5.80307 12.2597C6.49105 12.2597 7.04876 12.8175 7.04876 13.5054C7.04876 14.1934 6.49105 14.7511 5.80307 14.7511C5.1151 14.7511 4.55739 14.1934 4.55739 13.5054ZM10.9307 13.5054C10.9307 12.8175 11.4884 12.2597 12.1764 12.2597C12.8644 12.2597 13.4221 12.8175 13.4221 13.5054C13.4221 14.1934 12.8644 14.7511 12.1764 14.7511C11.4884 14.7511 10.9307 14.1934 10.9307 13.5054Z" />
+              </svg>
               2 товара
             </a>
             <a class="user-menu-link user-menu-link-cart link-cart-empty" href="#">
@@ -153,7 +172,7 @@
                 <h3 class="slide-title">Нежный пломбир<br>с клубничным джемом</h3>
                 <p class="slide-description">Натуральное мороженое из свежих сливок<br>
                   и молока с вкуснейшим клубничным джемом –<br>это идеальный десерт для всей семьи.</p>
-                <a class="btn btn-basic slide-order-btn btn-basic-loading" href="#">Заказать</a>
+                <a class="btn btn-basic slide-order-btn" href="#">Заказать</a>
               </div>
               <ol class="slider-image-list">
                 <li class="slider-image-current-item slider-image-current-first">
@@ -418,7 +437,7 @@
                 Честно =)</p>
               <form class="subscribe-form" method="post" action="https://echo.htmlacademy.ru/">
                 <label class="visually-hidden" for="subscribe">E-mail</label>
-                <input class="subscribe-input" name="subscribe" id="subscribe" type="email"
+                <input class="input-basic subscribe-input" name="subscribe" id="subscribe" type="email"
                   placeholder="email@example.com" required>
                 <button class="btn btn-secondary btn-subscribe" type="submit">Отправить</button>
               </form>
@@ -436,15 +455,15 @@
               заказ.
             </p>
             <label class="delivery-form-label delivery-form-label-date" for="delivery-date">Дата</label>
-            <input class="delivery-form-input delivery-form-input-date" name="delivery" id="delivery-date" type="date"
-              placeholder="01.04.2020" required>
+            <input class="input-basic delivery-form-input delivery-form-input-date" name="delivery" id="delivery-date"
+              type="date" placeholder="01.04.2020" required>
             <label class="delivery-form-label delivery-form-label-phone" for="delivery-phone">Телефон</label>
-            <input class="delivery-form-input delivery-form-input-phone" name="delivery" id="delivery-phone" type="tel"
-              placeholder="+7 800 999-00-00" required>
+            <input class="input-basic delivery-form-input delivery-form-input-phone" name="delivery" id="delivery-phone"
+              type="tel" placeholder="+7 800 999-00-00" required>
             <label class="delivery-form-label delivery-form-label-adress" for="delivery-adress">Адрес</label>
-            <input class="delivery-form-input delivery-form-input-adress" name="delivery" id="delivery-adress"
-              type="text" placeholder="ул. Большая Конюшенная, 19/8" required>
-            <button class="btn btn-secondary btn-delivery btn-secondary-loading" type="submit">Отправить</button>
+            <input class="input-basic delivery-form-input delivery-form-input-adress" name="delivery"
+              id="delivery-adress" type="text" placeholder="ул. Большая Конюшенная, 19/8" required>
+            <button class="btn btn-secondary btn-delivery" type="submit">Отправить</button>
           </form>
         </section>
         <section class="contacts">
