--- a/catalog.html
+++ b/catalog.html
@@ -17,7 +17,6 @@
                             <a class="header-navigation-logo-link" href="./index.html">
                                 <img class="header-logo-image" src="./images/logo.svg" alt="Лого." width="137"
                                     height="56">
-                                <h1 class="visually-hidden">Интернет-магазин мороженого "Глейси"</h1>
                             </a>
                         </li>
                         <li class="header-navigation-item header-navigation-item-catalog">
@@ -32,11 +31,14 @@
                             </a>
                             <!-- для того, чтобы показать поповер, уберите класс popover-hidden -->
                             <section class="popover-catalog popover-hidden">
+                                <h2 class="visually-hidden">Каталог</h2>
                                 <ul class="popover-catalog-list">
                                     <li class="popover-catalog-item popover-catalog-item-new">
                                         <a class="popover-catalog-link" href="#">Новинки</a>
                                     </li>
-                                    <hr class="popover-catalog-divider">
+                                    <li>
+                                        <hr class="popover-catalog-divider">
+                                    </li>
                                     <li class="popover-catalog-item">
                                         <a class="popover-catalog-link" href="./catalog.html">Сливочное</a>
                                     </li>
@@ -66,7 +68,7 @@
                 </nav>
                 <ul class="header-user-menu">
                     <li class="user-menu-item">
-                        <p class="user-menu-phone" href="#">+7 800 555-86-28</p>
+                        <a class="user-menu-phone" href="tel:+78005558628">+7 800 555-86-28</a>
                     </li>
                     <li class="user-menu-item user-menu-search-item">
                         <!-- в открытом состоянии к ссылке добавить класс user-menu-link-active -->
@@ -147,7 +149,7 @@
                                             <p class="cart-product-subscription">1 кг х 310 ₽</p>
                                         </div>
                                     </a>
-                                    <p class="cart-product-price" href="#">310 ₽</p>
+                                    <p class="cart-product-price">310 ₽</p>
                                     <a class="cart-delete-product-btn" href="">
                                         <span class="visually-hidden">Удалить продукт из корзины</span>
                                     </a>
@@ -161,7 +163,7 @@
                                             <p class="cart-product-subscription">1,5 кг х 320 ₽</p>
                                         </div>
                                     </a>
-                                    <p class="cart-product-price" href="#">480 ₽</p>
+                                    <p class="cart-product-price">480 ₽</p>
                                     <a class="cart-delete-product-btn" href="">
                                         <span class="visually-hidden">Удалить продукт из корзины</span>
                                     </a>
