--- a/index.html
+++ b/index.html
@@ -142,32 +142,32 @@
               <h2 class="popover-cart-title">Корзина</h2>
               <ul class="popover-cart-products">
                 <li class="popover-cart-product">
-                  <button class="cart-product-description" type="button">
+                  <a class="cart-product-description" href="#">
                     <img class="cart-product-image" width="46" height="46" src="./images/taste-raspberry.png"
                       alt="Малинка">
-                    <span class="cart-product-text">
+                    <div class="cart-product-text">
                       <span class="cart-product-name">Малинка</span>
                       <span class="cart-product-subscription">1 кг х 310 ₽</span>
-                    </span>
-                  </button>
-                  <p class="cart-product-price">310 ₽</p>
-                  <a class="cart-delete-product-btn" href="">
-                    <span class="visually-hidden">Удалить продукт из корзины</span>
+                    </div>
                   </a>
+                  <p class="cart-product-price">310 ₽</p>
+                  <button class="cart-delete-product-btn" type="button">
+                    <span class="visually-hidden">Удалить продукт из корзины</span>
+                  </button>
                 </li>
                 <li class="popover-cart-product">
-                  <button class="cart-product-description" type="button">
+                  <a class="cart-product-description" href="#">
                     <img class="cart-product-image" width="46" height="46" src="./images/taste-sorbet.png"
                       alt="Бабл-гам">
-                    <span class="cart-product-text">
+                    <div class="cart-product-text">
                       <span class="cart-product-name">Бабл-гам</span>
                       <span class="cart-product-subscription">1,5 кг х 320 ₽</span>
-                    </span>
-                  </button>
-                  <p class="cart-product-price">480 ₽</p>
-                  <a class="cart-delete-product-btn" href="">
-                    <span class="visually-hidden">Удалить продукт из корзины</span>
+                    </div>
                   </a>
+                  <p class="cart-product-price">480 ₽</p>
+                  <button class="cart-delete-product-btn" type="button">
+                    <span class="visually-hidden">Удалить продукт из корзины</span>
+                  </button>
                 </li>
               </ul>
               <div class="cart-footer">
@@ -498,7 +498,7 @@
             </p>
             <label class="delivery-form-label delivery-form-label-date" for="delivery-date">Дата
               <span class="tooltip">
-                <a class="tooltip-toggle" aria-labelledby="tooltip-label-date" href=""></a>
+                <a class="tooltip-toggle" type="button" aria-labelledby="tooltip-label-date" href=""></a>
                 <span class="tooltip-text" role="tooltip" id="tooltip-label-date">
                   Укажите дату доставки</span>
               </span>
